# venice-turpentine

./: .gitignore  README.md  pyproject.toml
.trunk/: trunk.yaml
app/: article.py  close.py  engine.py  exceptions.py  history.py  lexer.py  misc.py  parser.py  parser_constraints.py  pop_engine.py  proof.py  requirements.txt  rule.py  sentence.py  start.py  tree.py  tree_helpers.py  usedrule.py
app/Application/: __template__.py
app/Assistant/: __template__.py
app/Auto/: __template__.py  seqcal.py
app/Formal/: __template__.py  __utils__.py  analytic_freedom.py  int_seqcal_scottish.py  int_seqcal_swiss.py  zeroth_order_logic.py
app/FormalSolver/: __template__.py
app/FormalSystem/: __template__.py  __utils__.py  int_seqcal_scottish.py  int_seqcal_swiss.py  zeroth_order_logic.py
app/FormalUser/: __template__.py  __utils__.py  analytic_freedom.py  int_seqcal_scottish.py  int_seqcal_swiss.py  zeroth_order_logic.py
app/Lexicon/: __template__.py  __utils__.py  basic.py  classic.py
app/Output/: TeX_infer.py  __template__.py  __utils__.py  actual_tree.py  debug.py
app/UserInterface/: CLI.py
app/config/: config.json  config_copy.json
app/core/: __main__.py  colors.py  (+13 more)
distributing/: contain.bat  file_list.py  remove_app.bat  requirements.txt  send_to_plugins.py
old tests/: sessionintegrationtest.py  solvertest.py  tautologies_20_5-1.txt
tests/: article.html  articletest.py  cmdtest.py  poptest.py  sentencetest.py  sessionintegrationtest.py  sessiontest.py  solvertest.py  syntaxtest.py  test_formula.py  test_lexer.py  tokenizertest.py  zerothtest.py
(+102 files in other folders)
